--- a/_Hello-SDL/_Hello-SDL.vcxproj
+++ b/_Hello-SDL/_Hello-SDL.vcxproj
@@ -110,6 +110,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="defines.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
